--- a/DibnerLibraryApp/Base.lproj/LaunchScreen.storyboard
+++ b/DibnerLibraryApp/Base.lproj/LaunchScreen.storyboard
@@ -15,12 +15,32 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" alpha="0.59999999999999998" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="loginbg" translatesAutoresizingMaskIntoConstraints="NO" id="hH0-Rh-TmU">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.41176470590000003" green="0.1019607843" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="hH0-Rh-TmU" secondAttribute="bottom" id="5rh-uK-OvP"/>
+                            <constraint firstItem="hH0-Rh-TmU" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="9vr-cQ-5r6"/>
+                            <constraint firstItem="hH0-Rh-TmU" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="GlU-Ed-Gtf"/>
+                            <constraint firstItem="hH0-Rh-TmU" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" id="W6R-w8-8TN"/>
+                            <constraint firstAttribute="trailing" secondItem="hH0-Rh-TmU" secondAttribute="trailing" id="biQ-8a-lTq"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="W6R-w8-8TN"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="302" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="loginbg" width="2448" height="3264"/>
+    </resources>
 </document>
